Fixed bug #40192. When Blocked Nested Loops (BNL) algorithm is used for for a regular join each record of the joined table first is checked by the condition pushed to this table. Only after this the matches for this record in the join buffer are looked for. This does not work for an outer join operation as the condition pushed to an inner table may include predicates from the where clause which should be applied only after a match has been found.